--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="black">#000000</color>
+    <color name="grey">#6A6A6A</color>
+    <color name="light_grey">#BDBDBD</color>
+    <color name="white">#FFFFFF</color>
+    <color name="red">#D14343</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
