--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,11 @@
     <dimen name="appbar_padding">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="button_text_padding">5dp</dimen>
+    <dimen name="left_right_padding">10dp</dimen>
+    <dimen name="big_bottom_margin">15dp</dimen>
+    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_padding">2dp</dimen>
+    <dimen name="card_corner_radius">5dp</dimen>
+
 </resources>
