--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvp.view.ui.MainActivity">
+    tools:context=".mvp.view.ui.MainActivity"
+    android:background="@drawable/background_list_fragment"
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -29,7 +31,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minHeight="?actionBarSize"
-                    android:padding="@dimen/appbar_padding"
+                    android:paddingStart="@dimen/appbar_padding"
+                    android:paddingEnd="@dimen/appbar_padding"
                     android:text="@string/app_name"
                     android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
