--- a/app/src/main/res/drawable/ic_favorite_selected.xml
+++ b/app/src/main/res/drawable/ic_favorite_selected.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:tint="#F73A35"
+    android:width="24dp"
+    android:height="24dp"
+    android:tint="@color/soft_pink"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
