--- a/app/src/main/res/drawable/selector_favorite_enable.xml
+++ b/app/src/main/res/drawable/selector_favorite_enable.xml
@@ -3,7 +3,7 @@
 
     <item android:drawable="@drawable/ic_favorite_clicked" android:state_pressed="true"/>
     <item android:drawable="@drawable/ic_favorite_enable" android:state_enabled="true"/>
-    <item android:drawable="@drawable/ic_favorite_disable" android:state_pressed="false"/>
+    <item android:drawable="@drawable/ic_favorite_disable" android:state_enabled="false"/>
 
 
 </selector>
