--- a/app/src/main/res/drawable/selector_favorite_selected.xml
+++ b/app/src/main/res/drawable/selector_favorite_selected.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@drawable/ic_favorite_clicked" android:state_pressed="true"/>
     <item android:drawable="@drawable/ic_favorite_selected" android:state_enabled="true"/>
-    <item android:drawable="@drawable/ic_favorite_disable" android:state_pressed="false"/>
+    <item android:drawable="@drawable/ic_favorite_disable" android:state_enabled="false"/>
 </selector>
