--- a/app/src/main/res/layout/fragment_image_list.xml
+++ b/app/src/main/res/layout/fragment_image_list.xml
@@ -5,19 +5,14 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvp.view.ui.PussySearchFragment">
+    tools:context=".mvp.view.ui.PussySearchFragment"
+    >
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresher"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
+        android:background="@color/transparent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +22,10 @@
         <ViewFlipper
             android:id="@+id/flipper"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -46,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingStart="@dimen/left_right_padding"
-                android:paddingEnd="@dimen/left_right_padding" />
+                android:paddingEnd="@dimen/left_right_padding"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
