--- a/app/src/main/res/layout/holder_pussy.xml
+++ b/app/src/main/res/layout/holder_pussy.xml
@@ -6,7 +6,8 @@
     android:layout_margin="@dimen/card_margin"
     android:padding="@dimen/card_padding"
     app:cardCornerRadius="@dimen/card_corner_radius"
-    app:cardElevation="1dp"
+    app:cardElevation="5dp"
+    app:cardUseCompatPadding="true"
     >
 
     <FrameLayout
@@ -28,12 +29,13 @@
             android:id="@+id/favorite_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="@dimen/appbar_padding"
             android:layout_marginRight="@dimen/appbar_padding"
             android:layout_marginBottom="@dimen/appbar_padding"
             android:src="@drawable/selector_favorite_enable"
-            android:background="@color/transparent"
+            android:background="@drawable/selector_rounded_btn"
             />
 
     </FrameLayout>
